[gd_scene load_steps=7 format=3 uid="uid://cq5gdhexp333"]

[ext_resource type="Script" path="res://scripts/interface/craft_menu.gd" id="1_igfm0"]
[ext_resource type="Resource" uid="uid://cva3usl6n6x60" path="res://scripts/interface/craft_menu_tabs.tres" id="2_4vavk"]
[ext_resource type="Resource" uid="uid://bmmuckfm8ysts" path="res://inventory/item/all_craftable_items.tres" id="3_8to3e"]

[sub_resource type="Theme" id="Theme_d7vj2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eto42"]
bg_color = Color(0.298039, 0.298039, 0.298039, 0.843137)
corner_radius_top_left = 3
corner_radius_top_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvi2i"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.843137)
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="CraftMenu" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(335, 400)
offset_right = 320.0
offset_bottom = 400.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_d7vj2")
script = ExtResource("1_igfm0")
tabs_resource = ExtResource("2_4vavk")
all_craftable_items = ExtResource("3_8to3e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eto42")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TabContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="TabContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_vvi2i")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_bottom = 12

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="PageName" type="Label" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Crafting"
horizontal_alignment = 1

[node name="Weapon" type="ScrollContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Weapon"]
layout_mode = 2
theme_override_constants/margin_right = 5

[node name="ItemWeaponContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Weapon/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Heal" type="ScrollContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Heal"]
layout_mode = 2

[node name="ItemHealContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Heal/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Buildings" type="ScrollContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Buildings"]
layout_mode = 2

[node name="ItemBuildingsContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Buildings/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Tools" type="ScrollContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Tools"]
layout_mode = 2

[node name="ItemToolsContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Tools/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 0
